== In Git

== 0.5

=== New features
 * New custom varible: eclim-eclimrc. Used to specify an eclimrc file
   for the Eclim executable to use.
 * New custom variable: eclim-nailgun-port. used to specify the
   port the Eclimd is using when run using Nailgun.
 * Added type creation functionality. Default key binding is C-c C-e n.

== 0.4

=== New features
 * company mode completion can be case insensitive
 * added eclim-run-configuartion which runs a run configuration in the
   compilation buffer.
 * added eclim-java-generate-getter which generates a getter method
   for the symbol at point.
 * added eclim-java-generate-setter which generates a setter method
   for the symbol at point.
 * added eclim-java-refactor-move-class which allows moving a top level
   class or interface from one package to another.
 * added eclim-project-setting-set which can assign an Eclim project
   setting.
 * Fixed some compiler warnings. Not all compiler warnings were fixed
   since those changes could not be tested.
 * Enable automatic starting of eclimd with eclimd-autostart: This starts eclimd
   from within Emacs whenever eclim-mode is enabled or global-eclim-mode
   requires eclimd to determine if eclim-mode should be enabled in a
   buffer. This is opt-in for now, but may be the default in a future release.
   eclimd-autostart-with-default-workspace controls whether eclimd asks for a
   workspace when it gets autostarted (default nil).

== 0.3

=== New Features
 * organize imports
 * browsing with the class hierarchy
 * override / implement methods
 * display problems
 * run Ant targets
 * run Maven phases and goals
 * automatic refresh of the problems buffer
 * file-filter for the problems buffer
 * interface improvements for the problems buffer
 * improved mechanisms for calling the eclim server
 * rename/refactor in java code works as expected
 * functions for find declarations and refrences of java methods and members
 * Error highlighting in code